--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
 			<div class="col-lg-2 navLogo">
 				<a href="#">Jamine</a>
 			</div>
-			<div class="col-lg-10">
-				
+			<div class="col-lg-7 navMenu">
+				<ul class="navLi">
+					<li><a href="#">Новинки</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">хзхзхз</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</div>
+			<div class="col-lg-3 aCatalog">
+				<a href="#">Получить каталог</a>
 			</div>
 		</div>
 	</div>
 </div>
+<div class="line"></div>
 <div class="top">
 	
 </div>
