--- a/index.html
+++ b/index.html
@@ -8,38 +8,176 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  	<link rel="stylesheet" href="lib/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="navigation">
 	<div class="container nav">
 		<div class="row">
-			<div class="col-lg-2 navLogo">
+			<div class="col-md-2 navLogo">
 				<a href="#">Jamine</a>
 			</div>
-			<div class="col-lg-7 navMenu">
+			<div class="col-md-6 navMenu">
 				<ul class="navLi">
 					<li><a href="#">Новинки</a></li>
 					<li><a href="#">О нас</a></li>
-					<li><a href="#">хзхзхз</a></li>
 					<li><a href="#">Контакты</a></li>
 				</ul>
 			</div>
-			<div class="col-lg-3 aCatalog">
-				<a href="#">Получить каталог</a>
+			<div class="comd-4 aCatalog">
+				<a href="https://vk.com/market-121192171" target="_blank">Получить каталог</a>
 			</div>
 		</div>
 	</div>
 </div>
 <div class="line"></div>
 <div class="top">
+	<div class="topSlider">
+	    <div class="slider">
+	    	<div class="container">
+	    		<div class="row">
+	    			<div class="col-md-7">
+	    				<section>
+	    				<h1>Нижнее белье ручной работы</h1>
+	    				<h2>Как утверждают многие представительницы прекрасного пола, ощущение себя в соблазнительном нижнем белье придает уверенность и блеск в глазах, даже если сверху надет повседневный деловой костюм.</h2>
+	    				</section>
+	    			</div>
+	    			<div class="col-md-5 text-right">
+	    				<img src="img/ts1.jpg" alt="">
+	    			</div>
+	    		</div>
+	    	</div>
+	    </div>
+	    <div class="slider">
+	    	<div class="container">
+	    		<div class="row">
+	    			<div class="col-md-7">
+	    				<section>
+	    					<h1>Вязанные купальники</h1>
+	    					<h2>В наших вязаных купальниках и топах легко и комфортно в любую погоду, они созданы из органических материалов!</h2>
+	    				</section>
+	    			</div>
+	    			<div class="col-md-5 text-right">
+	    				<img src="img/ts2.jpg" alt="">
+	    			</div>
+	    		</div>
+	    	</div>
+	    </div>
+	</div>
+</div>
+
+<div class="poi">
+	<div class="sliderMidle">
+		<div><img src="img/sliderMidle/1.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/2.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/3.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/4.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/5.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/6.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/7.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/8.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/9.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/10.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/11.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/12.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/13.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/14.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/15.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/16.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/17.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/18.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/19.jpg" alt=""></div>
+		<div><img src="img/sliderMidle/20.jpg" alt=""></div>
+		
+	
+</div>
+</div>
+
+<div class="instagramm">
+		<section class="parallax-window" data-speed = "0.5" data-parallax="scroll" data-image-src="img/ts1.jpg">
+		
+		<section class="instagrammText">
+			<a href="#">Наш instagram</a>
+		</section>
+		
+	</section>
+</div>
+
+<div class="about">
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui et nulla sit aperiam laudantium enim voluptas nesciunt, at eos modi incidunt saepe commodi tempora excepturi error asperiores assumenda repellendus cupiditate.
+</div>
+
+<div class="instagramm">
+		<section class="parallax-window2" data-speed = "0.5" data-parallax="scroll" data-image-src="img/ts2.jpg">
+		
+		<section class="instagrammText">
+			<a href="#">Со мной ты можешь капризничать</a>
+		</section>
+		
+	</section>
+</div>
+
+<div class="contacts">
+	<h1>свяжитесь с нами</h1>
+	<section>
+		<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+		<a href="#"><i class="fa fa fa-vk" aria-hidden="true"></i></a>
+		<a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a>
+	</section>
+</div>
+
+<div class="footer">
 	
 </div>
 
-
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script src="script/parallax.min.js"></script>
+  <!-- topSlider -->
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.topSlider').slick({
+		speed: 800,
+		slidesToShow: 1,
+		autoplay: true,
+  		autoplaySpeed: 3000,
+  		fade: true,
+  		cssEase: 'linear'
+      });
+    });
+  </script>
+ <!-- end topSlider -->
+ <!-- sliderMidle -->
+   <script type="text/javascript">
+    $(document).ready(function(){
+      $('.sliderMidle').slick({
+    autoplay: true,
+  	autoplaySpeed: 2000,
+  	infinite: true,
+  	speed: 700,
+  	slidesToShow: 1,
+  	centerMode: true,
+  	variableWidth: true
+	});
+    });
+  </script>
+  
+  	<script>
+	$('.parallax-window').parallax({imageSrc: 'img/ts1.jpg'});	
+	</script>
+	<script>
+	$('.parallax-window2').parallax({imageSrc: 'img/ts2.jpg'});	
+	</script>
+ <!-- end sliderMidle -->
 </body>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
 
 </html>
