--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a href="#">Контакты</a></li>
 				</ul>
 			</div>
-			<div class="comd-4 aCatalog">
+			<div class="col-md-4 aCatalog">
 				<a href="https://vk.com/market-121192171" target="_blank">Получить каталог</a>
 			</div>
 		</div>
@@ -107,7 +107,17 @@
 </div>
 
 <div class="about">
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui et nulla sit aperiam laudantium enim voluptas nesciunt, at eos modi incidunt saepe commodi tempora excepturi error asperiores assumenda repellendus cupiditate.
+	<h1>КАК СДЕЛАТЬ ЗАКАЗ</h1>
+	<h2>Круглосуточно принимаем заказы на пошив нижнего белья, вязанных купальников и других вязаных изделий по вашим меркам. <br>ЧТОБЫ ЗАКАЗАТЬ И КУПИТЬ изделие ручной работы, необходимо: </h2>
+	<ul>
+		<li>Выбрать модель из альбома группы, либо любая желаемая модель на картинке </li>
+		<li>Прислать ее в ЛС </li>
+		<li>Мерки:объем груди в см, объем под грудью в см, объем бедер в см,  длина линии резинки трусиков в см, объем чашки лифа(A B C D), размер белья, одежды, которую покупаете в магазине, рост  </li>
+		<li>Цвет изделия </li>
+		<li>Оплата на карту Сбербанка 100% в случае если планируется отправка в другой город (для клиентов г.Абакан действует частичная предоплата) </li>
+		<li>Через 5-10 дней(в зависимости от загруженности) Ваше белье будет готово! 
+</li>
+	</ul>
 </div>
 
 <div class="instagramm">
@@ -123,10 +133,15 @@
 <div class="contacts">
 	<h1>свяжитесь с нами</h1>
 	<section>
-		<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-		<a href="#"><i class="fa fa fa-vk" aria-hidden="true"></i></a>
+		<a href="https://www.instagram.com/kgamine/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+		<a href="https://vk.com/jaminelingerie" target="_blank"><i class="fa fa fa-vk" aria-hidden="true"></i></a>
 		<a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a>
+		<a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a>
 	</section>
+	<h2>WhatsApp/Viber +7-983-276-5-999</h2>
+	<div class="aCatalog">
+		<a href="https://vk.com/market-121192171" target="_blank">Перейти в наш каталог</a>
+	</div>
 </div>
 
 <div class="footer">
