--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 			</div>
 			<div class="col-md-6 navMenu">
 				<ul class="navLi">
-					<li><a href="#">Новинки</a></li>
-					<li><a href="#">О нас</a></li>
-					<li><a href="#">Контакты</a></li>
+					<li><a href="#collection">Новинки</a></li>
+					<li><a href="#lOffer">Как заказать?</a></li>
+					<li><a href="#lContacts">Контакты</a></li>
 				</ul>
 			</div>
 			<div class="col-md-4 aCatalog">
@@ -96,17 +96,37 @@
 </div>
 </div>
 
+<div class="newCollection" id="collection">
+<h1>Наши новинки</h1>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<img src="img/sliderMidle/1.jpg" alt="">
+			</div>
+			<div class="col-md-3">
+				<img src="img/sliderMidle/2.jpg" alt="">
+			</div>
+			<div class="col-md-3">
+				<img src="img/sliderMidle/5.jpg" alt="">
+			</div>
+			<div class="col-md-3">
+				<img src="img/sliderMidle/4.jpg" alt="">
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="instagramm">
 		<section class="parallax-window" data-speed = "0.5" data-parallax="scroll" data-image-src="img/ts1.jpg">
 		
 		<section class="instagrammText">
-			<a href="#">Наш instagram</a>
+			<a href="https://www.instagram.com/kgamine/" target="_blank">Наш instagram</a>
 		</section>
 		
 	</section>
 </div>
 
-<div class="about">
+<div class="about" id="lOffer">
 	<h1>КАК СДЕЛАТЬ ЗАКАЗ</h1>
 	<h2>Круглосуточно принимаем заказы на пошив нижнего белья, вязанных купальников и других вязаных изделий по вашим меркам. <br>ЧТОБЫ ЗАКАЗАТЬ И КУПИТЬ изделие ручной работы, необходимо: </h2>
 	<ul>
@@ -130,7 +150,7 @@
 	</section>
 </div>
 
-<div class="contacts">
+<div class="contacts" id="lContacts">
 	<h1>свяжитесь с нами</h1>
 	<section>
 		<a href="https://www.instagram.com/kgamine/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -139,13 +159,16 @@
 		<a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a>
 	</section>
 	<h2>WhatsApp/Viber +7-983-276-5-999</h2>
-	<div class="aCatalog">
+	<div class="dowmCatalog">
 		<a href="https://vk.com/market-121192171" target="_blank">Перейти в наш каталог</a>
 	</div>
 </div>
 
 <div class="footer">
-	
+	<section>
+		<p>Разработка сайта Evgeniy Muratov</p>
+		<p>COPYRIGHT © 2017 Jamine</p>
+		</section>
 </div>
 
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
